[package]
name = "utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skyline_smash.workspace = true
skyline.workspace = true
smash_script.workspace = true
hdr-macros.workspace = true
bitflags = "1.3.2"
modular-bitfield = "0.11.2"
smash-rs.workspace = true