[package]
name = "common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skyline = "0.2.1"
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
smashline = { git = "https://github.com/HDR-Development/smashline.git" }
utils = { package = "dynamic", path = "../../dynamic" }
ninput = { git = "https://github.com/blu-dev/ninput" }
interpolation = "0.2.0" # for f32::lerp
smash2 = { package = "smash", git = "https://github.com/blu-dev/smash-rs" }
rand = { git = "https://github.com/skyline-rs/rand" }