[package]
name = "link"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { package = "dynamic", path = "../../dynamic" }
skyline = "0.2.1"
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script", branch = "development" }
smashline = { git = "https://github.com/HDR-Development/smashline" }