[package]
name = "younglink"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package = "common-dyn", path = "../common-dyn" }
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
