[package]
name = "params"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skyline_smash = { workspace = true }
module = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }

params-macros = { path = "../params-macros" }