[package]
name = "variables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sealed = "0.4.0"
skyline = { workspace = true }
skyline_smash = { workspace = true }
smashline = { workspace = true }
variables-macros = { path = "../variables-macros" }
module = { path = "../module" }
parking_lot = { workspace = true }
once_cell = { workspace = true }