[package]
name = "variables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skyline_smash = { workspace = true }
smashline = { workspace = true }
module = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
variables-macros = { path = "../variables-macros" }
events = { path = "../../lib/events" }